// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components: BoxDetails matches snapshot 1`] = `
<div
  className="tss-fd984x-root-root"
>
  <div
    className="tss-1028ajb-header-item"
  >
    <h2
      className="MuiTypography-root MuiTypography-h2 mui-dcgvbp-MuiTypography-root"
    >
      overview
    </h2>
  </div>
  <div
    className="tss-ipyph0-item"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 label mui-pfovru-MuiTypography-root"
    >
      slot
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 detail mui-pfovru-MuiTypography-root"
    >
      100,000,000
    </p>
  </div>
  <div
    className="tss-ipyph0-item"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 label mui-pfovru-MuiTypography-root"
    >
      hash
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 detail mui-pfovru-MuiTypography-root"
    >
      76nwV8zz8tLz97SBRXH6uwHvgHXtqJDLQfF66jZhQ857
    </p>
  </div>
</div>
`;

exports[`components: BoxDetails matches snapshot with title actions 1`] = `
<div
  className="tss-fd984x-root-root"
>
  <div
    className="tss-1028ajb-header-item"
  >
    <h2
      className="MuiTypography-root MuiTypography-h2 mui-dcgvbp-MuiTypography-root"
    >
      overview
    </h2>
    <button
      id="titleAction"
      onClick={[MockFunction]}
      type="button"
    >
      title action
    </button>
  </div>
  <div
    className="tss-ipyph0-item"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 label mui-pfovru-MuiTypography-root"
    >
      slot
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 detail mui-pfovru-MuiTypography-root"
    >
      100,000,000
    </p>
  </div>
  <div
    className="tss-ipyph0-item"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 label mui-pfovru-MuiTypography-root"
    >
      hash
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 detail mui-pfovru-MuiTypography-root"
    >
      76nwV8zz8tLz97SBRXH6uwHvgHXtqJDLQfF66jZhQ857
    </p>
  </div>
</div>
`;
